# hackathon

./: .dockerignore  .gitignore  Dockerfile  debug_words_aggregation.py  debug_words_route.py  description.md  docker-compose.yml  mongo_verification.txt  podcast-generator.py  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/core/: config.py
app/db/: mongodb.py
app/models/: podcast.py  user.py
app/routers/: audio.py  auth.py  podcasts.py  tests.py  users.py  words.py
app/services/: firebase_auth.py  podcast_generator.py
frontend/: Dockerfile  package.json
frontend/src/: App.jsx
frontend/src/components/: InputField.jsx  ProtectedRoute.jsx  SocialButton.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AudioPlayerPage.jsx  CreatePodcastPage.jsx  DecksPage.jsx  FlashcardsPage.jsx  LearningDashboard.jsx  LearningPage.jsx  ListeningPage.jsx  LoginPage.jsx  RecoveryPage.jsx  SpeakingListPage.jsx  SpeakingPage.jsx  TestListPage.jsx  TestSelectPage.jsx  WordDeckDetail.jsx  WordDecks.jsx
frontend/src/services/: api.js  firebase.js  podcastService.js  speakingService.js  wordService.js
scripts/: add_audio_links.py  move_processed_words.py  verify_auth.py
tests/: manual_test_audio.py
