[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.39",
    "certifi>=2026.1.4",
    "elevenlabs>=1.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "motor>=3.7.1",
    "paramiko>=3.4.0",
    "pydantic-settings>=2.12.0",
    "pydantic[standard]>=2.12.5",
    "audioop-lts>=0.2.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.40.0",
]
